---
source: packages/unisynth/src/optimizer/core/src/test.rs
assertion_line: 3008
expression: output
---
==INPUT==


import { componentQrl, inlinedQrl, useLexicalScope, useHostElement, useStore, useTaskQrl, noSerialize, SkipRerender, implicit$FirstArg } from '@khulnasoft.com/unisynth';
import { jsx, Fragment } from '@khulnasoft.com/unisynth/jsx-runtime';
import { isBrowser, isServer } from '@khulnasoft.com/unisynth/build';

function unisynthifyQrl(reactCmpQrl) {
    return /*#__PURE__*/ componentQrl(inlinedQrl((props)=>{
        const [reactCmpQrl] = useLexicalScope();
        const hostElement = useHostElement();
        const store = useStore({});
        let run;
        if (props['client:visible']) run = 'visible';
        else if (props['client:load'] || props['client:only']) run = 'load';
        useTaskQrl(inlinedQrl(async (track)=>{
            const [hostElement, props, reactCmpQrl, store] = useLexicalScope();
            track(props);
            if (isBrowser) {
                if (store.data) store.data.root.render(store.data.client.Main(store.data.cmp, filterProps(props)));
                else {
                    const [Cmp, client] = await Promise.all([
                        reactCmpQrl.resolve(),
                        import('./client-f762f78c.js')
                    ]);
                    let root;
                    if (hostElement.childElementCount > 0) root = client.hydrateRoot(hostElement, client.Main(Cmp, filterProps(props), store.event));
                    else {
                        root = client.createRoot(hostElement);
                        root.render(client.Main(Cmp, filterProps(props)));
                    }
                    store.data = noSerialize({
                        client,
                        cmp: Cmp,
                        root
                    });
                }
            }
        }, "unisynthifyQrl_component_useWatch_x04JC5xeP1U", [
            hostElement,
            props,
            reactCmpQrl,
            store
        ]), {
            run
        });
        if (isServer && !props['client:only']) {
            const jsx$1 = Promise.all([
                reactCmpQrl.resolve(),
                import('./server-9ac6caad.js')
            ]).then(([Cmp, server])=>{
                const html = server.render(Cmp, filterProps(props));
                return /*#__PURE__*/ jsx(Host, {
                    dangerouslySetInnerHTML: html,
                    [_IMMUTABLE]: [
                        "dangerouslySetInnerHTML"
                    ]
                });
            });
            return /*#__PURE__*/ jsx(Fragment, {
                children: jsx$1
            });
        }
        return /*#__PURE__*/ jsx(Host, {
            children: /*#__PURE__*/ jsx(SkipRerender, {})
        });
    }, "unisynthifyQrl_component_zH94hIe0Ick", [
        reactCmpQrl
    ]), {
        tagName: 'unisynth-wrap'
    });
}
const filterProps = (props)=>{
    const obj = {};
    Object.keys(props).forEach((key)=>{
        if (!key.startsWith('client:')) obj[key] = props[key];
    });
    return obj;
};
const unisynthify$ = implicit$FirstArg(unisynthifyQrl);

async function renderToString(rootNode, opts) {
    const mod = await import('./server-9ac6caad.js');
    const result = await mod.renderToString(rootNode, opts);
    const styles = mod.getGlobalStyleTag(result.html);
    const finalHtml = styles + result.html;
    return {
        ...result,
        html: finalHtml
    };
}

export { unisynthify$, unisynthifyQrl, renderToString };
        
============================= ../node_modules/@khulnasoft.com/unisynth-react/index.unisynth.mjs_unisynthifyQrl_component_useWatch_x04JC5xeP1U.mjs (ENTRY POINT)==

import { _auto_filterProps as filterProps } from "./index.unisynth.mjs";
import { isBrowser } from "@khulnasoft.com/unisynth/build";
import { noSerialize } from "@khulnasoft.com/unisynth";
import { useLexicalScope } from "@khulnasoft.com/unisynth";
export const unisynthifyQrl_component_useWatch_x04JC5xeP1U = async (track)=>{
    const [hostElement, props, reactCmpQrl, store] = useLexicalScope();
    track(props);
    if (isBrowser) {
        if (store.data) store.data.root.render(store.data.client.Main(store.data.cmp, filterProps(props)));
        else {
            const [Cmp, client] = await Promise.all([
                reactCmpQrl.resolve(),
                import('./client-f762f78c.js')
            ]);
            let root;
            if (hostElement.childElementCount > 0) root = client.hydrateRoot(hostElement, client.Main(Cmp, filterProps(props), store.event));
            else {
                root = client.createRoot(hostElement);
                root.render(client.Main(Cmp, filterProps(props)));
            }
            store.data = noSerialize({
                client,
                cmp: Cmp,
                root
            });
        }
    }
};
export { _hW } from "@khulnasoft.com/unisynth";


Some("{\"version\":3,\"sources\":[\"/user/unisynth/node_modules/@khulnasoft.com/unisynth-react/index.unisynth.mjs\"],\"names\":[],\"mappings\":\";;;;6DAa8B,OAAO;IACzB,MAAM,CAAC,aAAa,OAAO,aAAa,MAAM,GAAG;IACjD,MAAM;IACN,IAAI;QACA,IAAI,MAAM,IAAI,EAAE,MAAM,IAAI,CAAC,IAAI,CAAC,MAAM,CAAC,MAAM,IAAI,CAAC,MAAM,CAAC,IAAI,CAAC,MAAM,IAAI,CAAC,GAAG,EAAE,YAAY;aACrF;YACD,MAAM,CAAC,KAAK,OAAO,GAAG,MAAM,QAAQ,GAAG,CAAC;gBACpC,YAAY,OAAO;gBACnB,MAAM,CAAC;aACV;YACD,IAAI;YACJ,IAAI,YAAY,iBAAiB,GAAG,GAAG,OAAO,OAAO,WAAW,CAAC,aAAa,OAAO,IAAI,CAAC,KAAK,YAAY,QAAQ,MAAM,KAAK;iBACzH;gBACD,OAAO,OAAO,UAAU,CAAC;gBACzB,KAAK,MAAM,CAAC,OAAO,IAAI,CAAC,KAAK,YAAY;YAC7C;YACA,MAAM,IAAI,GAAG,YAAY;gBACrB;gBACA,KAAK;gBACL;YACJ;QACJ;;AAER\"}")
/*
{
  "origin": "../node_modules/@khulnasoft.com/unisynth-react/index.unisynth.mjs",
  "name": "unisynthifyQrl_component_useWatch_x04JC5xeP1U",
  "entry": null,
  "displayName": "index.unisynth.mjs_unisynthifyQrl_component_useWatch",
  "hash": "x04JC5xeP1U",
  "canonicalFilename": "index.unisynth.mjs_unisynthifyQrl_component_useWatch_x04JC5xeP1U",
  "path": "../node_modules/@khulnasoft.com/unisynth-react",
  "extension": "mjs",
  "parent": "unisynthifyQrl_component_zH94hIe0Ick",
  "ctxKind": "function",
  "ctxName": "useTask$",
  "captures": true,
  "loc": [
    721,
    1774
  ]
}
*/
============================= ../node_modules/@khulnasoft.com/unisynth-react/index.unisynth.mjs_unisynthifyQrl_component_zH94hIe0Ick.mjs (ENTRY POINT)==

import { Fragment } from "@khulnasoft.com/unisynth/jsx-runtime";
import { SkipRerender } from "@khulnasoft.com/unisynth";
import { _jsxBranch } from "@khulnasoft.com/unisynth";
import { _jsxC } from "@khulnasoft.com/unisynth";
import { _auto_filterProps as filterProps } from "./index.unisynth.mjs";
import { isServer } from "@khulnasoft.com/unisynth/build";
import { qrl } from "@khulnasoft.com/unisynth";
import { useHostElement } from "@khulnasoft.com/unisynth";
import { useLexicalScope } from "@khulnasoft.com/unisynth";
import { useStore } from "@khulnasoft.com/unisynth";
import { useTaskQrl } from "@khulnasoft.com/unisynth";
export const unisynthifyQrl_component_zH94hIe0Ick = (props)=>{
    _jsxBranch();
    const [reactCmpQrl] = useLexicalScope();
    const hostElement = useHostElement();
    const store = useStore({});
    let run;
    if (props['client:visible']) run = 'visible';
    else if (props['client:load'] || props['client:only']) run = 'load';
    useTaskQrl(/*#__PURE__*/ qrl(()=>import("./index.unisynth.mjs_unisynthifyQrl_component_useWatch_x04JC5xeP1U.mjs"), "unisynthifyQrl_component_useWatch_x04JC5xeP1U", [
        hostElement,
        props,
        reactCmpQrl,
        store
    ]), {
        run
    });
    if (isServer && !props['client:only']) {
        const jsx$1 = Promise.all([
            reactCmpQrl.resolve(),
            import('./server-9ac6caad.js')
        ]).then(([Cmp, server])=>{
            const html = server.render(Cmp, filterProps(props));
            return /*#__PURE__*/ _jsxC(Host, {
                dangerouslySetInnerHTML: html,
                [_IMMUTABLE]: [
                    "dangerouslySetInnerHTML"
                ]
            }, 3, "sV_0");
        });
        return /*#__PURE__*/ _jsxC(Fragment, {
            children: jsx$1
        }, 1, "sV_1");
    }
    return /*#__PURE__*/ _jsxC(Host, {
        children: /*#__PURE__*/ _jsxC(SkipRerender, null, 3, "sV_2")
    }, 1, "sV_3");
};


Some("{\"version\":3,\"sources\":[\"/user/unisynth/node_modules/@khulnasoft.com/unisynth-react/index.unisynth.mjs\"],\"names\":[],\"mappings\":\";;;;;;;;;;;oDAMiD,CAAC;;IAC1C,MAAM,CAAC,YAAY,GAAG;IACtB,MAAM,cAAc;IACpB,MAAM,QAAQ,SAAS,CAAC;IACxB,IAAI;IACJ,IAAI,KAAK,CAAC,iBAAiB,EAAE,MAAM;SAC9B,IAAI,KAAK,CAAC,cAAc,IAAI,KAAK,CAAC,cAAc,EAAE,MAAM;IAC7D;;;;;QA4BI;QACA;IACJ;IACA,IAAI,YAAY,CAAC,KAAK,CAAC,cAAc,EAAE;QACnC,MAAM,QAAQ,QAAQ,GAAG,CAAC;YACtB,YAAY,OAAO;YACnB,MAAM,CAAC;SACV,EAAE,IAAI,CAAC,CAAC,CAAC,KAAK,OAAO;YAClB,MAAM,OAAO,OAAO,MAAM,CAAC,KAAK,YAAY;YAC5C,OAAO,WAAW,GAAG,MAAI;gBACrB,yBAAyB;gBACzB,CAAC,WAAW,EAAE;oBACV;iBACH;;QAET;QACA,OAAO,WAAW,GAAG,MAAI;YACrB,UAAU;;IAElB;IACA,OAAO,WAAW,GAAG,MAAI;QACrB,UAAU,WAAW,GAAG,MAAI;;AAEpC\"}")
/*
{
  "origin": "../node_modules/@khulnasoft.com/unisynth-react/index.unisynth.mjs",
  "name": "unisynthifyQrl_component_zH94hIe0Ick",
  "entry": null,
  "displayName": "index.unisynth.mjs_unisynthifyQrl_component",
  "hash": "zH94hIe0Ick",
  "canonicalFilename": "index.unisynth.mjs_unisynthifyQrl_component_zH94hIe0Ick",
  "path": "../node_modules/@khulnasoft.com/unisynth-react",
  "extension": "mjs",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": true,
  "loc": [
    401,
    2706
  ]
}
*/
============================= ../node_modules/@khulnasoft.com/unisynth-react/index.unisynth.mjs ==

import { qrl } from "@khulnasoft.com/unisynth";
import { componentQrl, implicit$FirstArg } from '@khulnasoft.com/unisynth';
function unisynthifyQrl(reactCmpQrl) {
    return /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("./index.unisynth.mjs_unisynthifyQrl_component_zH94hIe0Ick.mjs"), "unisynthifyQrl_component_zH94hIe0Ick", [
        reactCmpQrl
    ]), {
        tagName: 'unisynth-wrap'
    });
}
const filterProps = (props)=>{
    const obj = {};
    Object.keys(props).forEach((key)=>{
        if (!key.startsWith('client:')) obj[key] = props[key];
    });
    return obj;
};
const unisynthify$ = implicit$FirstArg(unisynthifyQrl);
async function renderToString(rootNode, opts) {
    const mod = await import('./server-9ac6caad.js');
    const result = await mod.renderToString(rootNode, opts);
    const styles = mod.getGlobalStyleTag(result.html);
    const finalHtml = styles + result.html;
    return {
        ...result,
        html: finalHtml
    };
}
export { unisynthify$, unisynthifyQrl, renderToString };
export { filterProps as _auto_filterProps };


Some("{\"version\":3,\"sources\":[\"/user/unisynth/node_modules/@khulnasoft.com/unisynth-react/index.unisynth.mjs\"],\"names\":[],\"mappings\":\";AACA,SAAS,YAAY,EAAgG,iBAAiB,QAAQ,2BAA2B;AAIzK,SAAS,eAAe,WAAW;IAC/B,OAAO,WAAW,GAAG;;QA4DjB;QACA,SAAS;IACb;AACJ;AACA,MAAM,cAAc,CAAC;IACjB,MAAM,MAAM,CAAC;IACb,OAAO,IAAI,CAAC,OAAO,OAAO,CAAC,CAAC;QACxB,IAAI,CAAC,IAAI,UAAU,CAAC,YAAY,GAAG,CAAC,IAAI,GAAG,KAAK,CAAC,IAAI;IACzD;IACA,OAAO;AACX;AACA,MAAM,eAAe,kBAAkB;AAEvC,eAAe,eAAe,QAAQ,EAAE,IAAI;IACxC,MAAM,MAAM,MAAM,MAAM,CAAC;IACzB,MAAM,SAAS,MAAM,IAAI,cAAc,CAAC,UAAU;IAClD,MAAM,SAAS,IAAI,iBAAiB,CAAC,OAAO,IAAI;IAChD,MAAM,YAAY,SAAS,OAAO,IAAI;IACtC,OAAO;QACH,GAAG,MAAM;QACT,MAAM;IACV;AACJ;AAEA,SAAS,YAAY,EAAE,cAAc,EAAE,cAAc,GAAG\"}")
== DIAGNOSTICS ==

[]
